Fixed gap errors on ships

--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -65,6 +65,7 @@
   gap: 2px;
 }
 #shipToPick0 {
+  gap: 2px;
   display: grid;
   grid-template-columns: repeat(5, var(--grid-square-size));
 }
@@ -73,6 +74,7 @@
   grid-template-rows: repeat(3, var(--grid-square-size));
 }
 #shipToPick1 {
+  gap: 2px;
   grid-row: 2/3;
   display: grid;
   grid-template-columns: repeat(4, var(--grid-square-size));
@@ -82,6 +84,7 @@
   grid-template-rows: repeat(3, var(--grid-square-size));
 }
 #shipToPick2 {
+  gap: 2px;
   grid-row: 3/4;
   display: grid;
   grid-template-columns: repeat(3, var(--grid-square-size));
@@ -91,6 +94,7 @@
   grid-template-rows: repeat(3, var(--grid-square-size));
 }
 #shipToPick3 {
+  gap: 2px;
   grid-row: 4/5;
   display: grid;
   grid-template-columns: repeat(3, var(--grid-square-size));
@@ -100,6 +104,7 @@
   grid-template-rows: repeat(3, var(--grid-square-size));
 }
 #shipToPick4 {
+  gap: 2px;
   grid-row: 5/6;
   display: grid;
   grid-template-columns: repeat(2, var(--grid-square-size));
